latexテンプレ修正

--- a/masist/blank_icbinb_latex/template.tex
+++ b/masist/blank_icbinb_latex/template.tex
@@ -134,7 +134,7 @@ RESULTS HERE
 CONCLUSIONS HERE
 %%%%%%%%%CONCLUSION%%%%%%%%%
 
-\bibliography{iclr2025}
+\bibliography{iclr2025,references}
 \bibliographystyle{iclr2025}
 
 \appendix
